Set origin on armature moves incorrectly parented objects #67507

Closed
opened 2019-07-23 12:03:15 +02:00 by David Gayerie · 5 comments

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: pre RC2 blender 2.80 builds

Short description of error
One object parented to a bone.
When I change the origin of the armature (using set origin operator)
Then the armature origin is updated
But the parented object is moved incorrectly on the opposite direction.

Exact steps for others to reproduce the error
Here is an example file :

bug_set_origin.blend

Select the armature and choose set origin and "Origin to 3D cursor".

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: pre RC2 blender 2.80 builds **Short description of error** One object parented to a bone. When I change the origin of the armature (using set origin operator) Then the armature origin is updated But the parented object is moved incorrectly on the opposite direction. **Exact steps for others to reproduce the error** Here is an example file : [bug_set_origin.blend](https://archive.blender.org/developer/F7624252/bug_set_origin.blend) Select the armature and choose set origin and "Origin to 3D cursor".
Author

Added subscriber: @DavidGayerie

Added subscriber: @DavidGayerie
David Gayerie changed title from Set origin on armature move incorrectly parented objects to Set origin on armature moves incorrectly parented objects 2019-07-23 12:05:33 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Sergey Sharybin was assigned by Germano Cavalcante 2019-07-24 00:02:36 +02:00

The problem did not occur in blender 2.79.
The second call of the BKE_object_eval_parent(...) overwrites the correct value calculated the first time.

The problem did not occur in blender 2.79. The second call of the `BKE_object_eval_parent(...)` overwrites the correct value calculated the first time.

This issue was referenced by 250995d67b

This issue was referenced by 250995d67b772f0b7bd80aabb79b18d278ffc257

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67507
No description provided.